styled bunnies, bushed and walls. Wall's grass and zigzag pattern is still pending

--- a/index.html
+++ b/index.html
@@ -12,13 +12,64 @@
             <h1>Animationland</h1>
             <p>Score: </p>
         </section>
-        <div class="layer layer-1 bunny"></div>
-        <div class="layer layer-2 bunny"></div>
-        <div class="layer layer-3 wall"></div>
-        <div class="layer layer-4 bunny"></div>
-        <div class="layer layer-5 wall"></div>
-        <div class="layer layer-6 bunny"></div>
-        <div class="layer layer-7 wall"></div>
+        <div class="layer layer-1 bunny">
+            <div class="left-ear">
+                <div class="ear-inner"></div>
+            </div>
+            <div class="right-ear">
+                <div class="ear-inner"></div>
+            </div>
+            <div class="head">
+                <div class="eye eye-left"></div>
+                <div class="eye eye-right"></div>
+            </div>
+        </div>
+        <div class="layer layer-2 bunny">
+            <div class="left-ear">
+                <div class="ear-inner"></div>
+            </div>
+            <div class="right-ear">
+                <div class="ear-inner"></div>
+            </div>
+            <div class="head">
+                <div class="eye eye-left"></div>
+                <div class="eye eye-right"></div>
+            </div>
+        </div>
+        <div class="layer layer-3 wall">
+            <div class="grass"></div>
+            <div class="zigzag"></div>
+        </div>
+        <div class="layer layer-4 bunny">
+            <div class="left-ear">
+                <div class="ear-inner"></div>
+            </div>
+            <div class="right-ear">
+                <div class="ear-inner"></div>
+            </div>
+            <div class="head">
+                <div class="eye eye-left"></div>
+                <div class="eye eye-right"></div>
+            </div>
+        </div>
+        <div class="layer layer-5 wall">
+            <div class="grass"></div>
+        </div>
+        <div class="layer layer-6 bunny">
+            <div class="left-ear">
+                <div class="ear-inner"></div>
+            </div>
+            <div class="right-ear">
+                <div class="ear-inner"></div>
+            </div>
+            <div class="head">
+                <div class="eye eye-left"></div>
+                <div class="eye eye-right"></div>
+            </div>
+        </div>
+        <div class="layer layer-7 wall">
+            <div class="grass"></div>
+        </div>
         <div class="layer layer-8 bush"></div>
         <div class="layer layer-9 bush"></div>
         <div class="layer layer-10 bush"></div>
