Added initial translation animations to bunnies

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
         </div>
         <div class="layer layer-5 wall">
             <div class="grass"></div>
+            <div class="zigzag"></div>
         </div>
         <div class="layer layer-6 bunny">
             <div class="left-ear">
@@ -69,6 +70,7 @@
         </div>
         <div class="layer layer-7 wall">
             <div class="grass"></div>
+            <div class="zigzag"></div>
         </div>
         <div class="layer layer-8 bush"></div>
         <div class="layer layer-9 bush"></div>
