added eye blink animation and hit counter

--- a/index.html
+++ b/index.html
@@ -3,15 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Henny+Penny&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>CSS Animation Land</title>
 </head>
 <body>
     <main class="background">
-        <section class="title">
-            <h1>Animationland</h1>
-            <p>Score: </p>
-        </section>
         <div class="layer layer-1 bunny">
             <div class="left-ear">
                 <div class="ear-inner"></div>
@@ -23,6 +22,7 @@
                 <div class="eye eye-left"></div>
                 <div class="eye eye-right"></div>
             </div>
+            <input type="checkbox">
         </div>
         <div class="layer layer-2 bunny">
             <div class="left-ear">
@@ -35,6 +35,7 @@
                 <div class="eye eye-left"></div>
                 <div class="eye eye-right"></div>
             </div>
+            <input type="checkbox">
         </div>
         <div class="layer layer-3 wall">
             <div class="grass"></div>
@@ -51,6 +52,7 @@
                 <div class="eye eye-left"></div>
                 <div class="eye eye-right"></div>
             </div>
+            <input type="checkbox">
         </div>
         <div class="layer layer-5 wall">
             <div class="grass"></div>
@@ -67,6 +69,7 @@
                 <div class="eye eye-left"></div>
                 <div class="eye eye-right"></div>
             </div>
+            <input type="checkbox">
         </div>
         <div class="layer layer-7 wall">
             <div class="grass"></div>
@@ -75,6 +78,10 @@
         <div class="layer layer-8 bush"></div>
         <div class="layer layer-9 bush"></div>
         <div class="layer layer-10 bush"></div>
+        <section class="title">
+            <h1>ANIMATIONLAND</h1>
+            <p>Score: </p>
+        </section>
     </main>
 </body>
 </html>
